--- a/Js_Local.conf
+++ b/Js_Local.conf
@@ -135,3 +135,6 @@ https:\/\/api\.termius\.com\/api\/v3\/bulk\/account\/ url script-response-body N
 
 # PicsArt美易 pro
 ^https:\/\/api\.(picsart|meiease)\.c(n|om)\/users\/show\/me\.json url script-response-body NobyDa/Surge/JS/PicsArt.js
+
+# Splice 视频编辑器 pro
+^https:\/\/splice\.oracle\.\w+\.com\/devices\/me url script-response-body NobyDa/Surge/JS/Splice.js
