--- a/Js_Local.conf
+++ b/Js_Local.conf
@@ -141,3 +141,6 @@ https:\/\/api\.termius\.com\/api\/v3\/bulk\/account\/ url script-response-body N
 
 # Splice 视频编辑器 pro
 ^https:\/\/splice\.oracle\.\w+\.com\/devices\/me url script-response-body NobyDa/Surge/JS/Splice.js
+
+# 京东历史价格
+^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig) url script-response-body NobyDa/QuantumultX/File/JD_Price.js
