--- a/Js_Local.conf
+++ b/Js_Local.conf
@@ -73,7 +73,7 @@ https:\/\/ios\.xiaoxiaoapps\.com\/(vod\/reqplay\/|ucp/index|getGlobalData) url s
 ^https://r\.inews\.qq.com\/get(QQNewsUnreadList|RecommendList) url script-response-body NobyDa/Surge/JS/QQNews.js
 
 # 香蕉视频VIP (By Meeta)
-^https?:\/\/(apple|ios)\.fuliapps\.com url script-response-body NobyDa/QuantumultX/File/xjsp.js
+^https?:\/\/(ios|apple)\.(fuli|xiangjiao)apps\.com\/(ucp\/index|getGlobalData|vod\/reqplay\/) url script-response-body NobyDa/QuantumultX/File/xjsp.js
 
 # 用药助手解锁专业版 (By Primovist)
 ^https?:\/\/(i|newdrugs)\.dxy\.cn\/(snsapi\/username\/|app\/user\/(pro\/stat\?|init\?timestamp=)) url script-response-body NobyDa/Surge/JS/yyzs.js
