--- a/Js_Local.conf
+++ b/Js_Local.conf
@@ -130,8 +130,8 @@ https:\/\/api\.termius\.com\/api\/v3\/bulk\/account\/ url script-response-body N
 ^https:\/\/splice\.oracle\.\w+\.com\/devices\/me url script-response-body NobyDa/Surge/JS/Splice.js
 
 # 动画疯 去广告
-https:\/\/api\.gamer\.com\.tw\/mobile_app\/anime\/(v3\/token\.php|v1\/video\.php) url script-request-header Bahamut.js
-https:\/\/api\.gamer\.com\.tw\/mobile_app\/anime\/(v3\/token\.php|v1\/video\.php) url script-response-body Bahamut.js
+https:\/\/api\.gamer\.com\.tw\/mobile_app\/anime\/(v3\/token\.php|v1\/video\.php) url script-request-header NobyDa/Surge/JS/Bahamut.js
+https:\/\/api\.gamer\.com\.tw\/mobile_app\/anime\/(v3\/token\.php|v1\/video\.php) url script-response-body NobyDa/Surge/JS/Bahamut.js
 
 # 京东历史价格
 ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig) url script-response-body NobyDa/QuantumultX/File/JD_Price.js
