--- a/Js_Local.conf
+++ b/Js_Local.conf
@@ -24,8 +24,7 @@ hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com, api.
 ^https://app.bilibili.com/x/v2/show/popular/index\?access_key url script-response-body NobyDa/QuantumultX/File/bilibiliHot.js
 
 # 抖音去广告去水印 (By Choler)
-^https:\/\/.*\.amemv\.com\/aweme\/v.*\/(feed|post) url script-response-header NobyDa/Surge/JS/Aweme.js
-^https:\/\/.*\.amemv\.com\/aweme\/v.*\/(feed|post) url script-response-body NobyDa/Surge/JS/Aweme.js
+^https://aweme-eagle(.*)\.snssdk\.com\/aweme/.+/(feed|aweme/post|follow/feed)/ url script-response-body NobyDa/Surge/JS/Aweme.js
 
 # 酷我音乐SVIP (By yxiaocai)
 ^https?:\/\/vip1\.kuwo\.cn\/(vip\/v2\/user\/vip|vip\/spi/mservice) url script-response-body NobyDa/Surge/JS/Kuwo.js
