--- a/Js_Local.conf
+++ b/Js_Local.conf
@@ -25,7 +25,7 @@ hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com, api.
 
 # 抖音去广告去水印 (By Choler)
 ^https:\/\/(.*)\.amemv\.com\/aweme\/v\d\/feed\/ url 302 https://$1.amemv.com/aweme/v1/feed/
-^https:\/\/.*\.amemv\.com\/aweme\/v1.*\/(feed|post) url script-response-body Aweme.js
+^https:\/\/.*\.amemv\.com\/aweme\/v1.*\/(feed|post) url script-response-body NobyDa/Surge/JS/Aweme.js
 
 # 酷我音乐SVIP (By yxiaocai)
 ^https?:\/\/vip1\.kuwo\.cn\/(vip\/v2\/user\/vip|vip\/spi/mservice) url script-response-body NobyDa/Surge/JS/Kuwo.js
