--- a/Js_Local.conf
+++ b/Js_Local.conf
@@ -24,9 +24,9 @@ hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com, api.
 ^https://app.bilibili.com/x/v2/show/popular/index\?access_key url script-response-body NobyDa/QuantumultX/File/bilibiliHot.js
 
 # 抖音去广告去水印 (By Choler)
-#^https:\/\/(.*)\.amemv\.com\/aweme\/v\d\/feed\/ url 302 https://$1.amemv.com/aweme/v1/feed/
+^https:\/\/(.*)\.amemv\.com\/aweme\/v\d\/feed\/ url 302 https://$1.amemv.com/aweme/v1/feed/
 ^https:\/\/.*\.amemv\.com\/aweme\/v1.*\/(feed|post) url script-response-body NobyDa/Surge/JS/Aweme.js
-^https:\/\/.*\.amemv\.com\/aweme\/v1.*\/(feed|post) url script-request-header NobyDa/Surge/JS/Aweme.js
+
 # 酷我音乐SVIP (By yxiaocai)
 ^https?:\/\/vip1\.kuwo\.cn\/(vip\/v2\/user\/vip|vip\/spi/mservice) url script-response-body NobyDa/Surge/JS/Kuwo.js
 ^https?:\/\/musicpay\.kuwo\.cn\/music\.pay\?uid\=\d+ url 302 http://musicpay.kuwo.cn/music.pay?uid=1
