--- a/Js_Local.conf
+++ b/Js_Local.conf
@@ -27,7 +27,7 @@ hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com, api.
 #^https:\/\/(.*)\.amemv\.com\/aweme\/v\d\/feed\/ url 302 https://$1.amemv.com/aweme/v1/feed/
 #^https:\/\/.*\.amemv\.com\/aweme\/v1.*\/(feed|post) url script-response-body NobyDa/Surge/JS/Aweme.js
 ^https://.*\.amemv\.com/aweme/v2/feed/ url request-header ^GET /aweme/v2/feed/(.+) request-header GET /aweme/v1/feed/$1
-^https://.*\.amemv\.com/aweme/v2/follow/feed/ url request-header ^POST /aweme/v2/follow/feed/(.+) request-header POST /aweme/v1/follow/feed/$1
+#^https://.*\.amemv\.com/aweme/v2/follow/feed/ url request-header ^POST /aweme/v2/follow/feed/(.+) request-header POST /aweme/v1/follow/feed/$1
 ^https:\/\/.*\.amemv\.com\/aweme\/v.*\/(feed|post) url script-response-body NobyDa/Surge/JS/Aweme.js
 
 # 酷我音乐SVIP (By yxiaocai)
