--- a/Js_Local.conf
+++ b/Js_Local.conf
@@ -24,7 +24,6 @@ hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com, api.
 ^https://app.bilibili.com/x/v2/show/popular/index\?access_key url script-response-body NobyDa/QuantumultX/File/bilibiliHot.js
 
 # 抖音去广告去水印 (By Choler)
-#^https://.*\.amemv\.com/aweme/v2/follow/feed/ url request-header ^POST /aweme/v2/follow/feed/(.+) request-header POST /aweme/v1/follow/feed/$1
 ^https://.*\.amemv\.com/aweme/v2/feed/ url request-header ^GET /aweme/v2/feed/(.+) request-header GET /aweme/v1/feed/$1
 ^https:\/\/.*\.amemv\.com\/aweme\/v.*\/(feed|post) url script-response-body NobyDa/Surge/JS/Aweme.js
 
@@ -36,7 +35,7 @@ hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com, api.
 https:\/\/.*\.xiaoxiao.*\.com\/(vod\/reqplay\/|ucp/index|getGlobalData) url script-response-body NobyDa/QuantumultX/File/xxys.js
 
 # tiktok封区解锁
-(.*video_id=\w{32})(.*watermark=)(.*) url 302 $1
+#(.*video_id=\w{32})(.*watermark=)(.*) url 302 $1
 (?<=(carrier|account|sys)_region=)CN url 307 JP
 
 # 爱美剧Vip (by huihui）(官网：app.meiju2018.com)
