--- a/Js_Local.conf
+++ b/Js_Local.conf
@@ -132,4 +132,4 @@ https:\/\/api\.gamer\.com\.tw\/mobile_app\/anime\/v3\/token\.php url script-requ
 https:\/\/api\.gamer\.com\.tw\/mobile_app\/anime\/v3\/token\.php url script-response-body NobyDa/Surge/JS/Bahamut.js
 
 # 京东历史价格
-^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig) url script-response-body NobyDa/QuantumultX/File/JD_Price.js
+#^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig) url script-response-body NobyDa/QuantumultX/File/JD_Price.js
