--- a/Js_Local.conf
+++ b/Js_Local.conf
@@ -132,3 +132,7 @@ https:\/\/api\.gamer\.com\.tw\/mobile_app\/anime\/v3\/token\.php url script-resp
 
 # 京东历史价格
 ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig) url script-response-body NobyDa/QuantumultX/File/JD_Price.js
+
+# 淘宝历史价格
+^http://.+/amdc/mobileDispatch url script-request-body NobyDa/QuantumultX/File/TB_Price.js
+^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail url script-response-body NobyDa/QuantumultX/File/TB_Price.js
