--- a/Js_Web.conf
+++ b/Js_Web.conf
@@ -131,7 +131,7 @@ https:\/\/api\.gamer\.com\.tw\/mobile_app\/anime\/v3\/token\.php url script-requ
 https:\/\/api\.gamer\.com\.tw\/mobile_app\/anime\/v3\/token\.php url script-response-body NobyDa/Surge/JS/Bahamut.js
 
 # 京东历史价格
-^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig) url script-response-body NobyDa/QuantumultX/File/JD_Price.js
+^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js
 
 # 淘宝历史价格
 ^http://.+/amdc/mobileDispatch url script-request-body NobyDa/QuantumultX/File/TB_Price.js
