--- a/Js_Local.conf
+++ b/Js_Local.conf
@@ -136,3 +136,7 @@ https:\/\/api\.gamer\.com\.tw\/mobile_app\/anime\/v3\/token\.php url script-resp
 # 淘宝历史价格
 ^http://.+/amdc/mobileDispatch url script-request-body NobyDa/QuantumultX/File/TB_Price.js
 ^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail url script-response-body NobyDa/QuantumultX/File/TB_Price.js
+
+# Netflix评分
+^https?://ios\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D url script-request-header NobyDa/Surge/JS/nf_rating.js
+^https?://ios\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D url script-response-body NobyDa/Surge/JS/nf_rating.js
