--- a/Js_Web.conf
+++ b/Js_Web.conf
@@ -35,7 +35,7 @@ hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com, api.
 https:\/\/.*\.xiaoxiao.*\.com\/(vod\/reqplay\/|ucp/index|getGlobalData) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/xxys.js
 
 # tiktok封区解锁
-(.*video_id=\w{32})(.*watermark=)(.*) url 302 $1
+# (.*video_id=\w{32})(.*watermark=)(.*) url 302 $1
 (?<=(carrier|account|sys)_region=)CN url 307 JP
 
 # 爱美剧Vip (by huihui）(官网：app.meiju2018.com)
