--- a/Js_Local.conf
+++ b/Js_Local.conf
@@ -137,3 +137,6 @@ https:\/\/api\.gamer\.com\.tw\/mobile_app\/anime\/v3\/token\.php url script-resp
 # Netflix评分
 ^https?://ios\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D url script-request-header NobyDa/Surge/JS/nf_rating.js
 ^https?://ios\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D url script-response-body NobyDa/Surge/JS/nf_rating.js
+
+#小魔女破解付费房
+^http:\/\/m\.xmn\d+\.com\/xmn\/live\/room\/intoRoom\/* url script-response-body XiaoMoNv.js
