--- a/Js_Remote.conf
+++ b/Js_Remote.conf
@@ -145,3 +145,4 @@ https:\/\/api\.gamer\.com\.tw\/mobile_app\/anime\/v3\/token\.php url script-resp
 ^http:\/\/m\.xmn\d+\.com\/xmn\/live\/room\/honoureds\/* url script-response-body https://raw.githubusercontent.com/Datou86/Quantumult-X/master/Script/XiaoMoNv.js
 ^http:\/\/m\.hahuiyun\.com\/xmn\/live\/room\/honoureds\/* url script-response-body https://raw.githubusercontent.com/Datou86/Quantumult-X/master/Script/XiaoMoNv.js
 ^http:\/\/m\.0575myqc\.com\/xmn\/live\/room\/honoureds\/* url script-response-body https://raw.githubusercontent.com/Datou86/Quantumult-X/master/Script/XiaoMoNv.js
+^http:\/\/m\.typaimai\.com\/xmn\/live\/room\/honoureds\/* url script-response-body https://raw.githubusercontent.com/Datou86/Quantumult-X/master/Script/XiaoMoNv.js
