--- a/Js_Local.conf
+++ b/Js_Local.conf
@@ -140,8 +140,10 @@ https:\/\/api\.gamer\.com\.tw\/mobile_app\/anime\/v3\/token\.php url script-resp
 
 #小魔女破解付费房
 ^http:\/\/m\.xmn\d+\.com\/xmn\/live\/room\/intoRoom\/* url script-response-body XiaoMoNv.js
-^http:\/\/m\.hahuiyun\.com\/xmn\/live\/room\/intoRoom\/* url script-response-body XiaoMoNv.js
-^http:\/\/m\.0575myqc\.com\/xmn\/live\/room\/intoRoom\/* url script-response-body XiaoMoNv.js
 ^http:\/\/m\.xmn\d+\.com\/xmn\/live\/room\/honoureds\/* url script-response-body XiaoMoNv.js
+^http:\/\/m\.hahuiyun\.com\/xmn\/live\/room\/intoRoom\/* url script-response-body XiaoMoNv.js
 ^http:\/\/m\.hahuiyun\.com\/xmn\/live\/room\/honoureds\/* url script-response-body XiaoMoNv.js
+^http:\/\/m\.0575myqc\.com\/xmn\/live\/room\/intoRoom\/* url script-response-body XiaoMoNv.js
 ^http:\/\/m\.0575myqc\.com\/xmn\/live\/room\/honoureds\/* url script-response-body XiaoMoNv.js
+^http:\/\/m\.typaimai\.com\/xmn\/live\/room\/intoRoom\/* url script-response-body XiaoMoNv.js
+^http:\/\/m\.typaimai\.com\/xmn\/live\/room\/honoureds\/* url script-response-body XiaoMoNv.js
