--- a/Js_Cookie.conf
+++ b/Js_Cookie.conf
@@ -1,8 +1,5 @@
-hostname = draw.jdfcloud.com, api.m.jd.com, *.iqiyi.com
+hostname = api.m.jd.com, *.iqiyi.com
 
-
-# 来客有礼
-https:\/\/draw\.jdfcloud\.com\/\/api\/bean\/square\/silverBean\/task\/get\? url script-request-header https://raw.githubusercontent.com/Sunert/Scripts/master/Task/lkyl.js
 
 # 京东
 https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
