--- a/Js.conf
+++ b/Js.conf
@@ -28,14 +28,22 @@ https://api.bilibili.com/x/v2/reply/main?access_key url script-response-body htt
 https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom?access_key url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20live.js
 
 # 抖音去广告去水印 (By Choler)
-^https?:\/\/.+?\.amemv\.com\/aweme\/v\d\/feed\/ url 302 https://aweme.snssdk.com/aweme/v1/feed/
-^https?:\/\/.+?\.amemv\.com\/aweme\/v\d\/aweme\/post\/ url 302 https://aweme.snssdk.com/aweme/v1/aweme/post/
-^https?:\/\/.+?\.amemv\.com\/aweme\/v\d\/follow\/feed\/ url 302 https://aweme.snssdk.com/aweme/v1/follow/feed/
-^https?:\/\/.+?\.amemv\.com\/aweme\/v\d\/nearby\/feed\/ url 302 https://aweme.snssdk.com/aweme/v1/nearby/feed/
-^https?:\/\/.+?\.amemv\.com\/aweme\/v\d\/search\/item\/ url 302 https://aweme.snssdk.com/aweme/v1/search/item/
-^https?:\/\/.+?\.amemv\.com\/aweme\/v\d\/general\/search\/single\/ url 302 https://aweme.snssdk.com/aweme/v1/general/search/single/
-^https?:\/\/.+?\.amemv\.com\/aweme\/v\d\/hot/search\/video\/list\/ url 302 https://aweme.snssdk.com/aweme/v1/hot/search/video/list/
-^https?:\/\/aweme\.snssdk\.com\/aweme\/v1\/(feed|aweme\/post|follow\/feed|nearby\/feed|search\/item|general\/search\/single|hot\/search\/video\/list)\/ url script-response-body https://Choler.github.io/Surge/Script/douyin.js
+# URL Rewrite
+^https?+:\/\/[\w-]++\.amemv\.com\/aweme\/v\d\/feed\/ url request-header ^GET \/aweme\/v\d\/feed\/(.+)(\r\n)Host:.+ request-header GET /aweme/v1/feed/$1$2Host: aweme.snssdk.com
+^https?+:\/\/[\w-]++\.amemv\.com\/aweme\/v\d\/aweme\/post\/ url request-header ^GET \/aweme\/v\d\/aweme\/post\/(.+)(\r\n)Host:.+ request-header GET /aweme/v1/aweme/post/$1$2Host: aweme.snssdk.com
+^https?+:\/\/[\w-]++\.amemv\.com\/aweme\/v\d\/follow\/feed\/ url request-header ^GET \/aweme\/v\d\/follow\/feed\/(.+)(\r\n)Host:.+ request-header GET /aweme/v1/follow/feed/$1$2Host: aweme.snssdk.com
+^https?+:\/\/[\w-]++\.amemv\.com\/aweme\/v\d\/nearby\/feed\/ url request-header ^GET \/aweme\/v\d\/nearby\/feed\/(.+)(\r\n)Host:.+ request-header GET /aweme/v1/nearby/feed/$1$2Host: aweme.snssdk.com
+^https?+:\/\/[\w-]++\.amemv\.com\/aweme\/v\d\/search\/item\/ url request-header ^GET \/aweme\/v\d\/search\/item\/(.+)(\r\n)Host:.+ request-header GET /aweme/v1/search/item/$1$2Host: aweme.snssdk.com
+^https?+:\/\/[\w-]++\.amemv\.com\/aweme\/v\d\/general\/search\/single\/ url request-header ^GET \/aweme\/v\d\/general\/search\/single\/(.+)(\r\n)Host:.+ request-header GET /aweme/v1/general/search/single/$1$2Host: aweme.snssdk.com
+^https?+:\/\/[\w-]++\.amemv\.com\/aweme\/v\d\/hot\/search\/video\/list\/ url request-header ^GET \/aweme\/v\d\/hot\/search\/video\/list\/(.+)(\r\n)Host:.+ request-header GET /aweme/v1/hot/search/video/list/$1$2Host: aweme.snssdk.com
+# Script
+^https?+:\/\/[\w-]++\.amemv\.com\/aweme\/v\d\/aweme\/post\/ url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Choler/Script/douyin_qx.js
+^https?+:\/\/[\w-]++\.amemv\.com\/aweme\/v\d\/feed\/ url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Choler/Script/douyin_qx.js
+^https?+:\/\/[\w-]++\.amemv\.com\/aweme\/v\d\/follow\/feed\/ url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Choler/Script/douyin_qx.js
+^https?+:\/\/[\w-]++\.amemv\.com\/aweme\/v\d\/nearby\/feed\/ url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Choler/Script/douyin_qx.js
+^https?+:\/\/[\w-]++\.amemv\.com\/aweme\/v\d\/search\/item\/ url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Choler/Script/douyin_qx.js
+^https?+:\/\/[\w-]++\.amemv\.com\/aweme\/v\d\/general\/search\/single\/ url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Choler/Script/douyin_qx.js
+^https?+:\/\/[\w-]++\.amemv\.com\/aweme\/v\d\/hot\/search\/video\/list\/ url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Choler/Script/douyin_qx.js
 
 # 酷我音乐SVIP (By yxiaocai)
 ^https?:\/\/vip1\.kuwo\.cn\/(vip\/v2\/user\/vip|vip\/spi/mservice) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Kuwo.js
